# imghash-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  codecov.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  optimization.yml  other.yml
.github/workflows/: main.yaml  pull_request.yaml  release.yaml
data/: README.md
docs/: average.md  difference.md  encoding.md  median.md  perceptual.md  resizing.md
src/: average.rs  convert.rs  difference.rs  imageops.rs  imghash.rs  lib.rs  math.rs  median.rs  perceptual.rs  resize.rs
