[package]
name = "imghash"
version = "1.6.0"

description = "Image hashing for Rust"

readme = "README.md"
license-file = "LICENSE"

authors = ["Yannick Alexander"]

repository = "https://github.com/YannickAlex07/imghash-rs"

edition = "2021"

[dependencies]
image = { version = "0.25.6", features = ["rayon"] }
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
rayon = "1.10.0"
