[package]
name = "imghash"
version = "1.6.0"

description = "Image hashing algorithms for Rust"

readme = "README.md"
license = "MIT"

authors = ["Yannick Alexander"]

repository = "https://github.com/YannickAlex07/imghash-rs"

edition = "2021"
rust-version = "1.85.1"

[dependencies]
image = { version = "0.25.10", features = ["rayon"] }
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
rayon = "1.10.0"
